[package]
name = "romio"
edition = "2018"

# When releasing to crates.io:
# - Update html_root_url.
# - Update CHANGELOG.md.
# - Update doc URL.
# - Create "v0.1.x" git tag.
version = "0.3.0-alpha.7"
authors = ["The Rust Networking Working Group", "Carl Lerche <me@carllerche.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/withoutboats/romio"
documentation = "https://withoutboats.github.io/romio/romio"
description = """
Event loop and I/O resources for asynchronous network services using futures
"""
categories = ["asynchronous", "network-programming"]

[dependencies]
crossbeam-utils = ""
lazy_static = ""
log = ""
mio = ""
mio-uds = ""
num_cpus = ""
parking_lot = "<1.0.0"
slab = ""
libc = ""
async-datagram = ""
async-ready = ""

[dependencies.futures]
version = "0.3.0-alpha.16"
package = "futures-preview"

[dev-dependencies]
bytes = ""
tempdir = ""
rand = ""

[dev-dependencies.env_logger]
version = ""
default-features = false
